project_files/k8s/backend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-app-service
spec:
  type: ClusterIP
  selector:
    app: app-deployment
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
